# rust-axum-pg-boilerplate

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20250924042715_create_users_table.sql
src/: main.rs
src/db/: mod.rs
src/dtos/: auth.rs  common.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth.rs
src/models/: token.rs  user.rs
src/repositories/: user.rs
src/routes/: auth.rs  mod.rs  user.rs
src/services/: auth.rs  mod.rs  token.rs  user.rs
src/utils/: errors.rs
