[package]
name = "my_first_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
argon2 = "0.5"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["serde", "v4"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4" }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
